--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="asset/css/style.css">
 </head>
 
 <body>
 
     <header>
-        <img src="img/Logo.png" alt="Logo boolean">
-        <h1>Toboolist</h1>
+        <div class="header">
+            <img src="img/Logo.png" alt="Logo boolean">
+            <h1>Toboolist</h1>
+        </div>
     </header>
 
     <main>
