Aggiunti bottoni nell'main

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
     </header>
 
     <main>
-
+        <div class="container">
+            <div class="bottoni">
+                <button class="task">
+                    Add Task
+                </button>
+                <button class="section">
+                    Add Section
+                </button>
+            </div>
+        </div>
     </main>
 
 
