--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@
                     Add Section
                 </button>
             </div>
+
+            <section class="checklist">
+                a <br>
+                a <br>
+                a <br>
+                a <br>
+                a <br>
+                a <br>
+                a <br>
+                a <br>
+                a <br>
+                a <br>
+            </section>
         </div>
+
     </main>
 
 
