Completamento struttura main

--- a/index.html
+++ b/index.html
@@ -29,16 +29,70 @@
             </div>
 
             <section class="checklist">
-                a <br>
-                a <br>
-                a <br>
-                a <br>
-                a <br>
-                a <br>
-                a <br>
-                a <br>
-                a <br>
-                a <br>
+                <div class="newtask">
+                    <h3> <span class="downarrow">▼</span> New Task</h3>
+                    <br>
+                    <ul class="task-list">
+                        <li>
+                            <img src="img/check.svg" alt="" class="check">
+                            <p>Quarterly Newsletter</p>
+                            <p class="editorial">Editorial</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="newtask">
+                    <h3> <span class="downarrow">▼</span> Today</h3>
+                    <br>
+                    <ul class="task-list">
+                        <li>
+                            <img src="img/check.svg" alt="" class="check">
+                            <p>Recruiting blog post</p>
+                            <p class="editorial">Editorial</p>
+                        </li>
+                        <li>
+                            <img src="img/check.svg" alt="" class="check">
+                            <p>Mobile app launch</p>
+                            <p class="goal">Q1 Goals</p>
+                        </li>
+                        <li>
+                            <img src="img/cross.svg" alt="" class="cross">
+                            <p>Interview John H.</p>
+                            <p class="recruiting">Recruiting</p>
+                        </li>
+                        <li>
+                            <img src="img/check.svg" alt="" class="check">
+                            <p>Summit update to mobile storefronts</p>
+                            <p class="mobile">Mobile</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="newtask">
+                    <h3> <span class="downarrow">▼</span> Upcoming</h3>
+                    <br>
+                    <ul class="task-list">
+                        <li>
+                            <img src="img/cross.svg" alt="" class="cross">
+                            <p>Schedule meeting with Alex</p>
+                        </li>
+                        <li>
+                            <img src="img/check.svg" alt="" class="check">
+                            <p>Homepage refresh</p>
+                            <p class="website">Website</p>
+                        </li>
+                        <li>
+                            <img src="img/check.svg" alt="" class="check">
+                            <p>onboard new sales team members</p>
+                            <p class="sales">Sales</p>
+                        </li>
+                        <li>
+                            <img src="img/check.svg" alt="" class="check">
+                            <p>Review editorial calendar</p>
+                            <p class="editorial">Editorial</p>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </div>
 
