--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 <body>
 
     <header>
+        <!-- Impostiamo un div che servirà da "limite al bg-color in css" -->
         <div class="header">
+            <!-- Carichiamo immagine e titolo -->
             <img src="img/Logo.png" alt="Logo boolean">
             <h1>Toboolist</h1>
         </div>
     </header>
 
     <main>
+        <!-- Impostiamo un container -->
         <div class="container">
+            <!-- Definiamo i due bottoni task e section -->
             <div class="bottoni">
                 <button class="task">
                     Add Task
@@ -28,10 +32,14 @@
                 </button>
             </div>
 
+            <!--Andiamo a creare la prima parte di tre della checklist -->
+
             <section class="checklist">
                 <div class="newtask">
+                    <!-- Impostiamo il titolo della checklist -->
                     <h3> <span class="downarrow">▼</span> New Task</h3>
                     <br>
+                    <!-- Creiamo un elenco non ordinato per la checklist -->
                     <ul class="task-list">
                         <li>
                             <img src="img/check.svg" alt="" class="check">
@@ -42,8 +50,10 @@
                 </div>
 
                 <div class="newtask">
+                    <!-- Impostiamo il titolo della checklist -->
                     <h3> <span class="downarrow">▼</span> Today</h3>
                     <br>
+                    <!-- Creiamo un elenco non ordinato per la checklist -->
                     <ul class="task-list">
                         <li>
                             <img src="img/check.svg" alt="" class="check">
@@ -69,8 +79,10 @@
                 </div>
 
                 <div class="newtask">
+                    <!-- Impostiamo il titolo della checklist -->
                     <h3> <span class="downarrow">▼</span> Upcoming</h3>
                     <br>
+                    <!-- Creiamo un elenco non ordinato per la checklist -->
                     <ul class="task-list">
                         <li>
                             <img src="img/cross.svg" alt="" class="cross">
